# dinjections

./: .gitignore  LICENSE  Makefile  README.md  main.py  pyproject.toml
src/dinjections/: app.py  exceptions.py  lifecycle.py  module.py  options.py
src/dinjections.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/pydi/: module.py
tests/: test_app.py
