# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dinjections"
version = "1.0.10"
description = "Dependency injection framework based on uber.fx for python"
readme = "README.md"
authors = [{ name = "Francisco Escher Guimarães da Silva", email = "egs.francisco@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["di", "dependency injeciton", "fx", "framework", "dinjections"]
dependencies = []
requires-python = ">=3.6"

[project.optional-dependencies]
dev = []

[project.urls]
repository = "https://github.com/franciscoescher/dinjections"

[tool.bumpver]
current_version = "2024.1010-alpha"
version_pattern = "YYYY.BUILD[-TAG]"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]
"README.md" = [
    "{version}",
    "{pep440_version}",
]

